# 06-crm

./: Cargo.toml  Makefile  README.md  cliff.toml
crm/: Cargo.toml  build.rs
crm-metadata/: Cargo.toml  build.rs
crm-metadata/src/: lib.rs
crm-send/: Cargo.toml  build.rs
crm-send/src/: main.rs
crm/src/: client.rs  server.rs
protos/: crm.proto
protos/user-stats/: messages.proto
user-stat/: .env  Cargo.toml  build.rs
user-stat/examples/: gen.rs
user-stat/fixtures/: data.sql
user-stat/migrations/: 20240704132911_init.sql  20240705063010_index.sql
user-stat/src/: lib.rs  main.rs
user-stat/src/abi/: mod.rs
user-stat/tests/: service.rs
