[package]
name = "user-stat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { workspace = true }
anyhow = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
derive_builder = "0.20.0"
futures = "0.3.30"
itertools = "0.13.0"
serde = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true, features = ["zstd", "tls"] }
fake = { version = "2.9.2", features = ["derive", "chrono"] }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
tonic-build = { workspace = true }
proto-builder-trait = "0.6.1"

[dev-dependencies]

nanoid = "0.4.0"
rand = "0.8.5"
serde = { workspace = true, features = ["derive"] }
