[package]
name = "user-stat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
test_utils = ["sqlx-db-tester"]

[dependencies]
sqlx = { workspace = true }
anyhow = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
derive_builder = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true, features = ["zstd", "tls"] }
fake = { version = "2.9.2", features = ["derive", "chrono"] }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx-db-tester = { version = "0.4.2", optional = true }

[build-dependencies]
anyhow = { workspace = true }
tonic-build = { workspace = true }
proto-builder-trait = { workspace = true }

[dev-dependencies]

nanoid = "0.4.0"
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
user-stat = { workspace = true, features = ["test_utils"] }
